# inih

./: INIReaderConfig.cmake.in  README.md  inihConfig.cmake.in  meson.build
.github/workflows/: meson.yml
examples/: CMakeLists.txt
tests/: meson.build  runtest.sh
